[gd_scene load_steps=6 format=3 uid="uid://ovgmopgfrdyf"]

[ext_resource type="Script" path="res://scripts/peca_geral.gd" id="1_j2lf4"]
[ext_resource type="Texture2D" uid="uid://c87dfcgjth2gt" path="res://icon.svg" id="2_ea7v6"]
[ext_resource type="Script" path="res://scripts/encaixes.gd" id="3_onx1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y210c"]
size = Vector2(39, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p8m8s"]
size = Vector2(42, 264)

[node name="Peca__I" type="Node2D"]
script = ExtResource("1_j2lf4")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.391, 2.125)
texture = ExtResource("2_ea7v6")

[node name="enc1" type="Area2D" parent="sprite"]
position = Vector2(-71.6113, 3.76471)
scale = Vector2(2.55754, 0.470588)
script = ExtResource("3_onx1d")

[node name="encaixe" type="CollisionShape2D" parent="sprite/enc1"]
position = Vector2(27.5, 96)
shape = SubResource("RectangleShape2D_y210c")
debug_color = Color(0.862745, 0.301961, 0, 0.188235)

[node name="enc2" type="Area2D" parent="sprite"]
position = Vector2(-71.6113, 3.76471)
scale = Vector2(2.55754, 0.470588)
script = ExtResource("3_onx1d")

[node name="encaixe2" type="CollisionShape2D" parent="sprite/enc2"]
position = Vector2(28, -112)
shape = SubResource("RectangleShape2D_y210c")
debug_color = Color(0.862745, 0.301961, 0, 0.188235)

[node name="enc3" type="Area2D" parent="sprite"]
position = Vector2(-71.6113, 3.76471)
scale = Vector2(2.55754, 0.470588)
script = ExtResource("3_onx1d")

[node name="encaixe3" type="CollisionShape2D" parent="sprite/enc3"]
position = Vector2(28, -43)
shape = SubResource("RectangleShape2D_y210c")
debug_color = Color(0.862745, 0.301961, 0, 0.188235)

[node name="enc4" type="Area2D" parent="sprite"]
position = Vector2(-71.6113, 3.76471)
scale = Vector2(2.55754, 0.470588)
script = ExtResource("3_onx1d")

[node name="encaixe4" type="CollisionShape2D" parent="sprite/enc4"]
position = Vector2(28, 25)
shape = SubResource("RectangleShape2D_y210c")
debug_color = Color(0.862745, 0.301961, 0, 0.188235)

[node name="area" type="Area2D" parent="sprite"]
position = Vector2(-71.6113, 3.76471)
scale = Vector2(2.55754, 0.470588)

[node name="Button" type="Button" parent="sprite/area"]
offset_left = 7.0
offset_top = 73.0
offset_right = 21.0
offset_bottom = 88.0
scale = Vector2(3, 3)
mouse_filter = 2
disabled = true
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="sprite/area"]
offset_left = 7.0
offset_top = -134.0
offset_right = 21.0
offset_bottom = -119.0
scale = Vector2(3, 3)
mouse_filter = 2
disabled = true
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="sprite/area"]
offset_left = 7.0
offset_top = -65.0
offset_right = 21.0
offset_bottom = -50.0
scale = Vector2(3, 3)
mouse_filter = 2
disabled = true
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="sprite/area"]
offset_left = 7.0
offset_top = 4.0
offset_right = 21.0
offset_bottom = 19.0
scale = Vector2(3, 3)
mouse_filter = 2
disabled = true
metadata/_edit_use_anchors_ = true

[node name="colisao" type="CollisionShape2D" parent="sprite/area"]
position = Vector2(28, -9)
shape = SubResource("RectangleShape2D_p8m8s")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="mouse_entered" from="sprite/enc1" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="sprite/enc1" to="sprite/enc1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="sprite/enc1" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="sprite/enc2" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="sprite/enc2" to="sprite/enc2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="sprite/enc2" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="sprite/enc3" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="sprite/enc3" to="sprite/enc3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="sprite/enc3" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="sprite/enc4" to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="sprite/enc4" to="sprite/enc4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="sprite/enc4" to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="sprite/area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="sprite/area" to="." method="_on_area_body_exited"]
